# rubikscube

./: .gitignore  Cargo.toml  README.md  justfile
cli/: Cargo.toml
cli/src/: interactive.rs  main.rs
examples/: simple_turning.rs
src/: .#interactive.rs  interactive.rs  lib.rs  main.rs  math.rs  solve.rs
src/cube/: arraycube.rs  cubiecube.rs  mod.rs  turn.rs
src/solve/: kociemba.rs  mod.rs  thistlewhaite.rs
