[package]
name = "rubiks-solver"
version = "0.2.0"
edition = "2021"

exclude = [
    "**~",
]

[features]
interactive = ["dep:pancurses"]

[dependencies]
clap = { version = "*", features = ["derive"] }
rand = "*"
pancurses = { version = "*", features = ["wide"], optional = true }
strum = { version = "*", features = ["derive"] }
const_for = "*"
bit-set = "*"
thiserror = "*"
rayon = "*"
serde = { version = "*", features = ["derive"] }
bincode = "*"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = 'abort'
strip = true
