[package]
name = "rubikscube"
version = "0.2.0"
edition = "2021"

exclude = [
    "**~",
]

[dependencies]
rand = "*"
strum = { version = "*", features = ["derive"] }
const_for = "*"
bit-set = "*"
thiserror = "*"
rayon = "*"
serde = { version = "*", features = ["derive"] }
bincode = "*"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = 'abort'
strip = true
