[package]
name = "rubikscube"
version = "0.3.0"
edition = "2021"

exclude = [
    "**~",
]

[dependencies]
rand = "0.8.5"
strum = { version = "*", features = ["derive"] }
const_for = "0.1.5"
bit-set = "0.8"
thiserror = "1"
rayon = "1.10"
serde = { version = "*", features = ["derive"] }
bincode = "1.3"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = 'abort'
strip = true
